--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,10 +2,16 @@ INCLUDE = -I${includedir}
 
 AM_CFLAGS = -Wall -g -O2 $(INCLUDE)
 
-bin_PROGRAMS = rpmsg_char_simple
+bin_PROGRAMS = rpmsg_char_simple rpmsg_char_benchmark
 
 # rpmsg_char_simple program
 rpmsg_char_simple_SOURCES = rpmsg_char_simple.c
 rpmsg_char_simple_CPPFLAGS = $(AM_CFLAGS)
 rpmsg_char_simple_LDADD = -lpthread -lti_rpmsg_char
 rpmsg_char_simple_LDFLAGS = -L${libdir}
+
+# rpmsg_char_benchmark program
+rpmsg_char_benchmark_SOURCES = rpmsg_char_benchmark.c
+rpmsg_char_benchmark_CPPFLAGS = $(AM_CFLAGS)
+rpmsg_char_benchmark_LDADD = -lpthread -lti_rpmsg_char
+rpmsg_char_benchmark_LDFLAGS = -L${libdir}
